refactor: use more concise APIs to collect streams